# qtshut

./: .gitignore  Cargo.toml  README.md  log.txt  windows定时关机app.md  架构设计方案.md
.trae/rules/: project_rules.md
src/: app.rs  main.rs
src/core/: countdown.rs  mod.rs  persistence.rs  shutdown.rs  system_compat.rs  time_parser.rs  types.rs
src/ui/: components.rs  manager.rs  mod.rs  theme.rs  tray.rs
src/utils/: config.rs  logger.rs  mod.rs  notification.rs  system.rs
