[package]
name = "qtshut"
version = "0.1.0"
edition = "2021"
authors = ["QtShut Team"]
description = "轻量化Windows定时关机软件"
license = "MIT"
repository = "https://github.com/qtshut/qtshut"
keywords = ["shutdown", "timer", "windows", "gui"]
categories = ["gui", "os::windows-apis"]

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# GUI框架
iced = { version = "0.12", features = ["tokio", "system", "advanced"] }

# 系统托盘
tray-icon = "0.14"
winit = "0.29"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 正则表达式
regex = "1.10"

# Windows API
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "winbase", 
    "shellapi", "synchapi", "winnt", "winerror",
    "handleapi", "minwindef", "ntdef", "securitybaseapi",
    "sysinfoapi"
] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

# 目录操作
dirs = "5.0"
tempfile = "3.21.0"

# 静态变量
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# 测试框架
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
codegen-units = 1   # 单个代码生成单元
panic = "abort"     # 减少二进制大小
strip = true        # 移除调试符号

# Windows特定配置
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }

[[bin]]
name = "qtshut"
path = "src/main.rs"